# SDL_Terraria_Clone

./: CMakeLists.txt  README.md  build.txt
headers/: Camera.h  Game.h  GameObject.h  GameTime.h  Input.h  Physics.h  Player.h  Texture.h  World.h
src/: Camera.cpp  Game.c  Game.cpp  GameObject.cpp  GameTime.cpp  Input.cpp  Physics.c  Physics.cpp  Player.c  Player.cpp  Texture.c  Texture.cpp  World.c  World.cpp  main.c  main.cpp
